{
  "version": 4,
  "terraform_version": "0.13.5",
  "serial": 28,
  "lineage": "6e38f816-1444-b507-c80f-f7bfbafa6fa5",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_elb",
      "name": "myelb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:415216890706:loadbalancer/terraform-elb",
            "availability_zones": [
              "us-east-2a"
            ],
            "connection_draining": true,
            "connection_draining_timeout": 100,
            "cross_zone_load_balancing": true,
            "dns_name": "terraform-elb-1360512101.us-east-2.elb.amazonaws.com",
            "health_check": [
              {
                "healthy_threshold": 2,
                "interval": 10,
                "target": "HTTP:80/index.html",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "terraform-elb",
            "idle_timeout": 100,
            "instances": [
              "i-0bb793d65ffc25236"
            ],
            "internal": false,
            "listener": [
              {
                "instance_port": 80,
                "instance_protocol": "http",
                "lb_port": 80,
                "lb_protocol": "http"
              }
            ],
            "name": "terraform-elb",
            "security_groups": [
              "sg-05cec0f2168c49ce3"
            ],
            "source_security_group": "415216890706/allow_port",
            "source_security_group_id": "sg-05cec0f2168c49ce3",
            "subnets": [
              "subnet-0066d7a1442f6c2a9"
            ],
            "tags": {
              "Name": "terraform-elb"
            },
            "zone_id": "Z3AADJGX6KTTL2"
          },
          "dependencies": [
            "aws_instance.web",
            "aws_security_group.allow_port",
            "aws_subnet.pubsub"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-09558250a3419e7d0",
            "arn": "arn:aws:ec2:us-east-2:415216890706:instance/i-0bb793d65ffc25236",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0bb793d65ffc25236",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0b6d4d6ad47451a1a",
            "private_dns": "ip-10-0-0-13.us-east-2.compute.internal",
            "private_ip": "10.0.0.13",
            "public_ip": "3.137.175.65",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0ae9ccb41cc4baa8f",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0066d7a1442f6c2a9",
            "tags": {
              "Name": "HelloWorld"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-05cec0f2168c49ce3"
            ]
          },
          "dependencies": [
            "aws_security_group.allow_port",
            "aws_subnet.pubsub"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "myigw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:415216890706:internet-gateway/igw-0e201ee2e270f28d3",
            "id": "igw-0e201ee2e270f28d3",
            "owner_id": "415216890706",
            "tags": {
              "Name": "p-igw"
            },
            "vpc_id": "vpc-0c5ef249a4bc4b330"
          },
          "dependencies": [
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "prt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-061e9b6fff358a080",
            "owner_id": "415216890706",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e201ee2e270f28d3",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "prt"
            },
            "vpc_id": "vpc-0c5ef249a4bc4b330"
          },
          "dependencies": [
            "aws_internet_gateway.myigw",
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "prt-association-sub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-033942c1809ee9939",
            "route_table_id": "rtb-061e9b6fff358a080",
            "subnet_id": "subnet-0066d7a1442f6c2a9"
          },
          "dependencies": [
            "aws_internet_gateway.myigw",
            "aws_route_table.prt",
            "aws_subnet.pubsub",
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_port",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:415216890706:security-group/sg-05cec0f2168c49ce3",
            "description": "Allow port inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05cec0f2168c49ce3",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "open port 22",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "open port 80",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "allow_port",
            "name_prefix": "",
            "owner_id": "415216890706",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_port"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c5ef249a4bc4b330"
          },
          "dependencies": [
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pubsub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:415216890706:subnet/subnet-0066d7a1442f6c2a9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.0.0/28",
            "id": "subnet-0066d7a1442f6c2a9",
            "map_public_ip_on_launch": true,
            "owner_id": "415216890706",
            "tags": {
              "Name": "pub1"
            },
            "vpc_id": "vpc-0c5ef249a4bc4b330"
          },
          "dependencies": [
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "myvpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:415216890706:vpc/vpc-0c5ef249a4bc4b330",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/24",
            "default_network_acl_id": "acl-0bed40401582df624",
            "default_route_table_id": "rtb-02bd29626dc769a15",
            "default_security_group_id": "sg-0d30f6b9af222eb9a",
            "dhcp_options_id": "dopt-313e5c58",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0c5ef249a4bc4b330",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-02bd29626dc769a15",
            "owner_id": "415216890706",
            "tags": {
              "Name": "production"
            }
          }
        }
      ]
    }
  ]
}